2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/wildcard.c (match_files): Add a useful dprintf.
	(wildcard_expand): Don't stop on nonregexp parts after regexp ones since
	it truncates the output.
	Reported by: Ximin Luo.

2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Skip . and ..

2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Load
	partmap before abstraction.

2011-06-24  Alexander Kurtz <kurtz.alex@googlemail.com>

	* util/grub-mkconfig_lib.in: Add missing quotes.

2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/getroot.c (grub_guess_root_device): Revert to
	old method if mountinfo would return /dev/root and /dev/root doesn't
	exist.

2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>

	ZFS zlib support

	* grub-core/fs/zfs/zfs.c (zlib_decompress): New function.
	(decomp_table): Add zlib entries.
	(zio_read): USe 8 bits for compression function rather than 3.
	* include/grub/zfs/zio.h (zio_compress): Add zlib values.

2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Add missing license statements.
	* grub-core/fs/romfs.c: Likewise.
	* grub-core/lib/ia64/setjmp.S: Likewise.
	* grub-core/loader/i386/pc/freedos.c: Likewise.
	* grub-core/loader/ia64/efi/linux.c: Likewise.
	* grub-core/video/colors.c: Likewise.
	* include/grub/dl.h (GRUB_MOD_DEP): New macro.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	AHCI support.

	* grub-core/Makefile.core.def (ata_pthru): Removed.
	(ahci): New module.
	(pata): Likewise.
	* grub-core/bus/usb/ohci.c (GRUB_MOD_FINI): Unregister preboot hook
	on unload.
	* grub-core/commands/hdparm.c (grub_hdparm_do_ata_cmd): Use ATA
	readwrite.
	(grub_hdparm_do_check_powermode_cmd): Likewise.
	(grub_hdparm_do_smart_cmd): Likewise.
	(grub_hdparm_set_val_cmd): Likewise.